--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,21 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* MeansOfTransport.module.css */
+.transportContainer {
+  border: 1px solid #ccc;
+  padding: 10px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.transportTitle {
+  color: blue;
+  font-size: 24px;
+}
+
+.transportButton {
+  background-color: green;
+  color: white;
+}
+.transportButton{
+  background-image: url("https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.langschwander.com%2Fnews%2F2016%2F12%2F14%2Fwhy-its-essential-you-travel-how-travel-tourism-boost-global-economics&psig=AOvVaw12Utp-9KK1gRMyvxbA8cxF&ust=1691080389282000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCJidjsGzvoADFQAAAAAdAAAAABAJ");
+}
+.transportContainer{
+  background-image: url("https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.langschwander.com%2Fnews%2F2016%2F12%2F14%2Fwhy-its-essential-you-travel-how-travel-tourism-boost-global-economics&psig=AOvVaw12Utp-9KK1gRMyvxbA8cxF&ust=1691080389282000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCJidjsGzvoADFQAAAAAdAAAAABAJ");
 }
