--- a/src/App.css
+++ b/src/App.css
@@ -14,15 +14,14 @@
 }
 
 .App-header {
-  background-color: #344b77;
-  background-image: url("https://www.self.com/story/coronavirus-travel-safety");
+  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: rgb(155, 11, 11);
+  color: white;
 }
 
 .App-link {
