--- a/src/Components/Style/Body.css
+++ b/src/Components/Style/Body.css
@@ -32,7 +32,7 @@ font-weight: 400;
 }  
 
 
-.card{
+.cardi{
     border: 1px solid #B45E01;
     background-color: black;
     border-radius: 0px;
@@ -56,7 +56,7 @@ h2{
     margin: 80px auto;
 }
 
-p{
+.cardi p{
     margin-left: 16px;
     width: 230px;
     color:white ;
