--- a/src/Components/Style/Places.css
+++ b/src/Components/Style/Places.css
@@ -75,7 +75,7 @@ body {
     background-color: darkgreen
     
   }
-  form{
+  .places form{
     position: relative;
     top: 150px;
     left: 50%;
@@ -89,7 +89,7 @@ body {
     border: 4px solid lemonchiffon;
     padding: 5px;
   }
-  input{
+  .places input{
     position: absolute;
     top: 0;
     left: 0;
@@ -117,14 +117,14 @@ body {
     font-size: 1.2em;
     transition: all 1s;
   }
-  form:hover{
+  .places form:hover{
     width: 200px;
     cursor: pointer;
   }
-  form:hover input{
+  .places form:hover input{
     display: block;
   }
-  form:hover .fa{
+  .places form:hover .fa{
     background: #07051a;
     color: lemonchiffon;
   }
