--- a/src/Components/Style/Body.css
+++ b/src/Components/Style/Body.css
@@ -1,11 +1,10 @@
+
 *{
     margin: 0px;
     padding: 0px;
 }
 
-.body {
-    
-    margin-top: -123px;
+.homebody .body {
 width: 100%;
 height: 100vh;
     background: url('../Images/background.png'), rgb(2, 1, 1) 50% / cover no-repeat; 
@@ -13,7 +12,7 @@ height: 100vh;
 }
 
 
-.h1{
+.homebody .h1{
     position: absolute;
     margin: 190px ;
     width: fit-content;
@@ -23,7 +22,7 @@ height: 100vh;
 
 
 
-h1{
+.homebody h1{
 color: black;
 font-family: Lalezar;
 font-size: 88px;
@@ -32,7 +31,7 @@ font-weight: 400;
 }  
 
 
-.cardi{
+.homebody .cardi{
     border: 1px solid #B45E01;
     background-color: black;
     border-radius: 0px;
@@ -40,7 +39,7 @@ font-weight: 400;
     height: 264px;
 }
 
-h2{
+.homebody h2{
     font-weight: bold;
                 font-size: 100px;
                 color: #ED820E;
@@ -48,7 +47,7 @@ h2{
                 margin-left: 80px;
 }
 
-.card2{
+.homebody .card2{
     position: absolute;
     width: 261px;
     height: 177px;
@@ -56,7 +55,7 @@ h2{
     margin: 80px auto;
 }
 
-.cardi p{
+.homebody .cardi p{
     margin-left: 16px;
     width: 230px;
     color:white ;
@@ -65,42 +64,42 @@ h2{
      font-family: 'Lato' , sans-serif;
 }
 
-h4{
+.homebody h4{
     text-align: center;
     color: #ED820E;
 }
 
-.wildlife{
+.homebody .wildlife{
     width: 364px;
     height: 374px;
     background-image: url(../Images/wildlife.png);
 }
 
 
-.historic{
+.homebody .historic{
     width: 364px;
     height: 374px;
     background-image: url(../Images/historic.png);
 }
 
 
-.coast{
+.homebody .coast{
     width: 364px;
     height: 374px;
     background-image: url(../Images/coast.png);
 }
 
-h3{
+.homebody h3{
     color: #ED820E;
     text-align:center ;
      padding-top: 400px ;
      font-size: 60px ;
 }
 
-.places h4{
-    padding-top: 150px ;
-    text-align:center;
-    color: #FFF;
+.places h4{ 
+  padding-top: 150px ;
+ text-align:center;
+ color: #FFF;
 font-family: Lalezar;
 font-size: 59px;
 font-style: normal;
@@ -108,3 +107,4 @@ font-weight: 400;
 line-height: normal;
 text-decoration-line: underline;
 }
+
