--- a/src/Components/Style/NavBar.css
+++ b/src/Components/Style/NavBar.css
@@ -34,4 +34,60 @@
     text-decoration-line: none;
 
   }
- 
+ /* LoginForm.css */
+.loginForm {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+  background-color: #fff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  max-width: 300px;
+  width: 100%;
+  z-index: 9999;
+}
+
+.loginForm h2 {
+  margin-bottom: 20px;
+  text-align: center;
+  font-size: 24px;
+  color: #333;
+}
+
+.loginForm input {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+}
+
+.loginForm button {
+  width: 100%;
+  padding: 10px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  font-size: 18px;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+}
+
+.loginForm button:last-child {
+  margin-top: 10px;
+  background-color: #dc3545;
+}
+
+.loginForm button:hover {
+  background-color: #0056b3;
+}
+
+.loginForm input:focus {
+  outline: none;
+  border-color: #007bff;
+  box-shadow: 0 0 5px #007bff;
+}
