--- a/src/Components/Style/Footer.css
+++ b/src/Components/Style/Footer.css
@@ -4,7 +4,7 @@
 .last{
     width: 100%;
     height: 100vh;
-    background-image: url('../Images/footer.png') ;
+    background-image: url('https://www.shutterstock.com/image-photo/sky-blue-background-cloud-clear-260nw-1386181790.jpg') ;
    background-size: cover;
 }
 
@@ -17,7 +17,10 @@
 
  .lastTexts p{
     margin-top: 20px;
-    font-size: 18px;
+    font-size: x-large;
+    filter: brightness(50%);
+    font-weight: 900;
+    
  }
 
  .lastTexts h6{
@@ -25,6 +28,7 @@
     font-size: 40px;
     text-align: center;
     color: #ED820E;
+    filter: brightness(50%);
  
  }
 }
